--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -35,7 +35,7 @@
         height: 100%;
         width: 100%;
         background-size: cover;
-        background-position: center;
+        background-position: top;
     }
   
     .content {
