--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,7 @@ body {
     padding: 30px 60px;
     font-family: 'Open Sans Condensed', sans-serif;
 }
+a {
+    color: black;
+    text-decoration: none;
+}
