--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,13 +1,12 @@
 .header {
-    height: 70px;
+    height: 100px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 50px;
     
     .logo-container {
       height: 100%;
-      width: 70px;
+      width: 10%;
       padding: 25px;
     }
     .logo {
