--- a/src/components/cart-dropdown/cart-dropdown.scss
+++ b/src/components/cart-dropdown/cart-dropdown.scss
@@ -16,6 +16,11 @@
       display: flex;
       flex-direction: column;
       overflow: scroll;
+
+      .empty-msg{
+        font-size: 18px;
+        margin: 50px auto;
+      }
     }
   
     button {
